kubernetes/apps/profilarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
  namespace: profilarr
  labels:
    app: profilarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: profilarr
  template:
    metadata:
      labels:
        app: profilarr
    spec:
      containers:
        - name: profilarr
          image: santiagosayshey/profilarr:v1.1.4
          ports:
            - containerPort: 6868
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: profilarr-config
