kubernetes/apps/profilarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: profilarr
  namespace: profilarr
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`profiles.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: profilarr
          port: 6868
  tls: {}
